cleanup code (apply intellij code inspection fixes) (#398)